--- a/views/vehicle-profile-page.ejs
+++ b/views/vehicle-profile-page.ejs
@@ -275,7 +275,6 @@ var colorRadio = 'red';
 					</div>
 					<div class="span3">
 						<p><i class="icon-user"></i>&nbsp;<%=seller.contactPerson.firstname%>&nbsp;<%=seller.contactPerson.surname%></p>
-						<p><i class="icon-envelope"></i>&nbsp; <%=user.emailAddress%></p>
 					<% for (var i = 0; i < seller.contactNumbers.length; i++) { %>
 						<p><i class="icon-home"></i>&nbsp; <%=seller.contactNumbers[i]%></p>
 					<% } %>
@@ -287,7 +286,6 @@ var colorRadio = 'red';
 				<div class="row">
 					<div class="span3">
 						<p><i class="icon-user"></i>&nbsp;<%=seller.contactPerson.firstname%>&nbsp;<%=seller.contactPerson.surname%></p>
-						<p><i class="icon-envelope"></i>&nbsp; <%=user.emailAddress%></p>
 						<p>
 							<i class="icon-map-marker"></i>&nbsp;
 							<%=seller.address.town%>,
@@ -306,24 +304,30 @@ var colorRadio = 'red';
 	</div>
 
 	<div class="span6">
-		<fieldset>
-			<legend>Email seller</legend>
+		<form id="sendEmail" method="post" action="/vehicles/<%=vehicle._id%>/email-seller">
+			<fieldset>
+				<legend>Email seller</legend>
 
-			<label>Your name:</label>
-			<input type="text" id="buyerName" name="buyer[name]" />
+				<label>Your name:</label>
+				<input type="text" id="buyerName" name="buyer[name]" />
 
-			<label>Your email address:</label>
-			<input type="email" id="buyerEmailAddress" name="buyer[emailAddress" />
+				<label>Your email address:</label>
+				<input type="email" id="buyerEmailAddress" name="buyer[emailAddress]" />
 
-			<label>Message:</label>
-			<textarea id="buyerMessage" name="buyer[message]" class="span6" />
-			</textarea>
-			<button class="btn btn-primary">Send</button>
-			<button class="btn btn-link">Cancel</button>
-		</fieldset>
+				<label>Message:</label>
+				<textarea id="buyerMessage" name="buyer[message]" class="span6" />
+				</textarea>
+
+				<button class="btn btn-success">Send</button>
+				<button class="btn">Clear</button>
+
+				<input type="hidden" name="seller[emailAddress]" value="<%=user.emailAddress%>">
+				<input type="hidden" name="vehicle[_id]" value="<%=vehicle._id%>">
+			</fieldset>
+		</form>
 	</div>
 </div>
 <div class="form-actions" style="display:<%=formActionsDisplay%>">
-	<a href="/vehicles/<%=vehicle._id%>/edit" class="btn">Edit</a>
-	<a href="/vehicles/<%=vehicle._id%>/remove" class="btn btn-link">Delete</a>
+	<a href="/vehicles/<%=vehicle._id%>/edit" class="btn btn-primary">Edit</a>
+	<a href="/vehicles/<%=vehicle._id%>/remove" class="btn btn-danger">Delete</a>
 </div>
